<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/data_management_indigo_light">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp">

    <Button
        android:id="@+id/exportCsvButton"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/export_csv" />

    <Button
        android:id="@+id/exportFullReportButton"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/export_full_report" />

    <Button
        android:id="@+id/exportFullReportPdfButton"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/export_full_report_pdf" />

    <Button
        android:id="@+id/backupDatabaseButton"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/backup_database" />

    <Button
        android:id="@+id/restoreDatabaseButton"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/restore_database" />

    <Button
        android:id="@+id/resetAllDataButton"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reset_all_data" />

</LinearLayout>
</ScrollView>
